<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.assmentgd1.Fargment.khoangthu.khoanthuFragment.KTViewPageFragment"
        android:label="@string/khoan_thu"
        tools:layout="@layout/fragment_khoangthu" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.assmentgd1.Fargment.khoangchi.KCFragment"
        android:label="@string/khoan_chi"
        tools:layout="@layout/fragment_khoangchi" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.assmentgd1.Fargment.thongke.TKFragment"
        android:label="@string/thong_ke"
        tools:layout="@layout/fragment_thongke" />



    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.assmentgd1.Fargment.gioithieu.GTFragment"
        android:label="@string/gioithieu"
        tools:layout="@layout/fragment_gioithieu" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.assmentgd1.Fargment.thoat.TFragment"
        android:label="@string/thoat"
        tools:layout="@layout/fragment_thoat" />
</navigation>